--- a/documentation_/layouts/print.tex
+++ b/documentation_/layouts/print.tex
@@ -1,4 +1,5 @@
 \usepackage{fancyvrb,newverbs,xcolor}
+\usepackage{float}
 
 \definecolor{Light}{HTML}{F4F4F4}
 
@@ -6,4 +7,13 @@
 \let\oldtexttt\texttt
 \renewcommand{\texttt}[1]{
   \colorbox{Light}{\oldtexttt{#1}}
+}
+
+
+\let\origfigure\figure
+\let\endorigfigure\endfigure
+\renewenvironment{figure}[1][2] {
+    \expandafter\origfigure\expandafter[H]
+} {
+    \endorigfigure
 }
